<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright © 2019 Cask Data, Inc.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not
  use this file except in compliance with the License. You may obtain a copy of
  the License at
  http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  License for the specific language governing permissions and limitations under
  the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>


  <name>Salesforce plugins</name>
  <groupId>io.cdap.plugin</groupId>
  <artifactId>salesforce-plugins-parent</artifactId>
  <version>1.7.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <description>Salesforce Plugins</description>
  <url>https://github.com/data-integrations/salesforce</url>

  <modules>
    <module>salesforce-common</module>
    <module>salesforce-plugins</module>
  </modules>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>CDAP</name>
      <email>cdap-dev@googlegroups.com</email>
      <organization>CDAP</organization>
      <organizationUrl>http://cdap.io</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/data-integrations/salesforce.git</connection>
    <developerConnection>scm:git:git@github.com:data-integrations/salesforce.git</developerConnection>
    <url>https://github.com/data-integrations/salesforce.git</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <surefire.redirectTestOutputToFile>true</surefire.redirectTestOutputToFile>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- version properties -->
    <avro.version>1.7.7</avro.version>
    <cdap.version>6.8.0</cdap.version>
    <junit.version>4.12</junit.version>
    <commons.io.version>2.6</commons.io.version>
    <commons.lang.version>2.6</commons.lang.version>
    <hadoop.version>2.10.2</hadoop.version>
    <spark2.version>2.1.3</spark2.version>
    <hydrator.version>2.10.0</hydrator.version>
    <commons.version>3.8.1</commons.version>
    <salesforce.api.version>53.0.0</salesforce.api.version>
    <cometd.java.client.version>4.0.0</cometd.java.client.version>
    <antlr.version>4.7.2</antlr.version>
    <mockito.version>2.23.0</mockito.version>
    <commons.csv.version>1.6</commons.csv.version>
    <jackson.version>1.9.13</jackson.version>
    <jackson2.version>2.9.9</jackson2.version>
    <json.version>20180813</json.version>
    <awaitility.version>3.1.6</awaitility.version>
    <commons-logging.version>1.2</commons-logging.version>
    <testSourceLocation>${project.basedir}/src/test/java/</testSourceLocation>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <powermock.version>2.0.2</powermock.version>
    <failsafe.version>3.3.2</failsafe.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.force.api</groupId>
      <artifactId>force-wsc</artifactId>
      <version>${salesforce.api.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.force.api</groupId>
      <artifactId>force-partner-api</artifactId>
      <version>${salesforce.api.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.force.api</groupId>
      <artifactId>force-metadata-api</artifactId>
      <version>${salesforce.api.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>antlr4-runtime</artifactId>
      <version>${antlr.version}</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>

  <build>
    <testSourceDirectory>${testSourceLocation}</testSourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.14.1</version>
        <configuration>
          <argLine>-Xmx3g -Djava.awt.headless=true -XX:+UseConcMarkSweepGC
            -Djava.net.preferIPv4Stack=true
          </argLine>
          <redirectTestOutputToFile>${surefire.redirectTestOutputToFile}</redirectTestOutputToFile>
          <reportFormat>plain</reportFormat>
          <systemPropertyVariables>
            <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
          </systemPropertyVariables>
          <includes>
            <include>**/*TestsSuite.java</include>
            <include>**/*TestSuite.java</include>
            <include>**/Test*.java</include>
            <include>**/*Test.java</include>
            <include>**/*TestCase.java</include>
          </includes>
          <excludes>
            <exclude>**/*TestRun.java</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.rat</groupId>
        <artifactId>apache-rat-plugin</artifactId>
        <version>0.10</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.doxia</groupId>
            <artifactId>doxia-core</artifactId>
            <version>1.6</version>
            <exclusions>
              <exclusion>
                <groupId>xerces</groupId>
                <artifactId>xercesImpl</artifactId>
              </exclusion>
            </exclusions>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>rat-check</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <excludes>
                <exclude>LICENSE*.txt</exclude>
                <!-- This file should be not be there, but I am excluding it for now -->
                <exclude>*.rst</exclude>
                <exclude>*.md</exclude>
                <exclude>**/*.cdap</exclude>
                <exclude>**/*.yaml</exclude>
                <exclude>**/*.md</exclude>
                <exclude>logs/**</exclude>
                <exclude>.git/**</exclude>
                <exclude>.idea/**</exclude>
                <exclude>**/grok/patterns/**</exclude>
                <exclude>conf/**</exclude>
                <exclude>data/**</exclude>
                <exclude>plugins/**</exclude>
                <exlcude>**/*.patch</exlcude>
                <exclude>**/logrotate.d/**</exclude>
                <exclude>**/limits.d/**</exclude>
                <exclude>**/*.json</exclude>
                <exclude>**/*.json.template</exclude>
                <exclude>**/MANIFEST.MF</exclude>
                <!-- exclude any hack classes -->
                <exclude>**/org/apache/hadoop/**</exclude>
                <!-- exclude resource files-->
                <exclude>**/resources/**</exclude>
              </excludes>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>validate</id>
            <phase>process-test-classes</phase>
            <configuration>

              <sourceDirectories>
                <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                <sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
              </sourceDirectories>

              <configLocation>checkstyle.xml</configLocation>
              <suppressionsLocation>suppressions.xml</suppressionsLocation>
              <encoding>UTF-8</encoding>
              <consoleOutput>true</consoleOutput>
              <failsOnError>true</failsOnError>
              <includeTestSourceDirectory>true</includeTestSourceDirectory>
              <testSourceDirectories>
                <testSourceDirectory>src/test/java</testSourceDirectory>
                <testSourceDirectory>src/e2e-test/java</testSourceDirectory>
              </testSourceDirectories>
              <excludes>**/org/apache/cassandra/**,**/org/apache/hadoop/**</excludes>
            </configuration>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>6.19</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>3.5.1</version>
        <extensions>true</extensions>
        <configuration>
          <instructions>
            <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>
            <Embed-Transitive>true</Embed-Transitive>
            <Embed-Directory>lib</Embed-Directory>
            <!--Only @Plugin classes in the export packages will be included as plugin-->
            <_exportcontents>
              io.cdap.plugin.*
            </_exportcontents>
          </instructions>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>bundle</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.antlr</groupId>
        <artifactId>antlr4-maven-plugin</artifactId>
        <version>${antlr.version}</version>
        <configuration>
          <listener>false</listener>
          <visitor>true</visitor>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>antlr4</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>e2e-tests</id>
      <properties>
        <testSourceLocation>src/e2e-test/java</testSourceLocation>
      </properties>
      <build>
        <testResources>
          <testResource>
            <directory>salesforce-core/src/e2e-test/resources</directory>
          </testResource>
        </testResources>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.18.1</version>
            <configuration>
              <skipTests>true</skipTests>
            </configuration>
          </plugin>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>3.0.0-M5</version>
            <configuration>
              <includes>
                <include>TestRunner.java</include>
              </includes>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>integration-test</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>net.masterthought</groupId>
            <artifactId>maven-cucumber-reporting</artifactId>
            <version>5.5.0</version>
            <executions>
              <execution>
                <id>execution</id>
                <phase>verify</phase>
                <goals>
                  <goal>generate</goal>
                </goals>
                <configuration>
                  <projectName>Cucumber Reports</projectName> <!-- Replace with project name -->
                  <outputDirectory>target/cucumber-reports/advanced-reports</outputDirectory>
                  <buildNumber>1</buildNumber>
                  <skip>false</skip>
                  <inputDirectory>${project.build.directory}/cucumber-reports</inputDirectory>
                  <jsonFiles> <!-- supports wildcard or name pattern -->
                    <param>**/*.json</param>
                  </jsonFiles> <!-- optional, defaults to outputDirectory if not specified -->
                  <classificationDirectory>${project.build.directory}/cucumber-reports</classificationDirectory>
                  <checkBuildResult>true</checkBuildResult>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
      <dependencyManagement>
        <dependencies>
          <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.0.1-jre</version>
            <scope>compile</scope>
          </dependency>
        </dependencies>
      </dependencyManagement>
      <dependencies>
        <dependency>
          <groupId>io.cdap.tests.e2e</groupId>
          <artifactId>cdap-e2e-framework</artifactId>
          <version>0.4.0-SNAPSHOT</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.2</version>
            <extensions>true</extensions>
            <configuration>
              <nexusUrl>https://oss.sonatype.org</nexusUrl>
              <serverId>sonatype.release</serverId>
            </configuration>
          </plugin>
          <!-- Source JAR -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>2.2.1</version>
            <configuration>
              <excludeResources>true</excludeResources>
            </configuration>
            <executions>
              <execution>
                <id>attach-sources</id>
                <phase>package</phase>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <!-- Javadoc jar -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>2.9.1</version>
            <configuration>
              <additionalparam>-Xdoclint:none</additionalparam>
              <failOnError>false</failOnError>
              <links>
                <link>http://download.oracle.com/javase/${jee.version}/docs/api/</link>
              </links>
              <doctitle>${project.name} ${project.version}</doctitle>
              <bottom>
                <![CDATA[Copyright &#169; {currentYear} <a href="http://cdap.io" target="_blank">CDAP</a> Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License, Version 2.0</a>.]]>
              </bottom>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadoc</id>
                <phase>package</phase>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.5</version>
            <configuration>
              <passphrase>${gpg.passphrase}</passphrase>
              <useAgent>${gpg.useagent}</useAgent>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
